--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Movies</title>
+    <link rel="shortcut icon" href="https://cdn-icons-png.flaticon.com/128/83/83519.png" type="image/x-icon">
     <style>
         body{
             margin: 0;
