--- a/index2.html
+++ b/index2.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Movies</title>
     <link rel="shortcut icon" href="https://cdn-icons-png.flaticon.com/128/83/83519.png" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <link rel="stylesheet" href="index2.css"> 
 </head>
 <body>
@@ -29,6 +30,55 @@
                     </li>
                 </ul>
             </div>
+            <div class="search_user">
+                <input type="text" placeholder="Search..." id="search_input">
+                <img src="user.jpg" alt="">
+                <div class="search">
+                   <a href="#" class="card">
+                    <img src="the boys.jpg" alt="">
+                    <div class="cont">
+                        <h3>The Boys</h3>
+                        <p>Action, 2021 , <span>IMDB</span><i class="bi bi-star-fill"></i>9.6</p>
+                    </div>
+                   </a>
+                   <a href="#" class="card">
+                    <img src="the boys.jpg" alt="">
+                    <div class="cont">
+                        <h3>The Boys</h3>
+                        <p>Action, 2021 , <span>IMDB</span><i class="bi bi-star-fill"></i>9.6</p>
+                    </div>
+                   </a>
+                   <a href="#" class="card">
+                    <img src="the boys.jpg" alt="">
+                    <div class="cont">
+                        <h3>The Boys</h3>
+                        <p>Action, 2021 , <span>IMDB</span><i class="bi bi-star-fill"></i>9.6</p>
+                    </div>
+                   </a>
+                   <a href="#" class="card">
+                    <img src="the boys.jpg" alt="">
+                    <div class="cont">
+                        <h3>The Boys</h3>
+                        <p>Action, 2021 , <span>IMDB</span><i class="bi bi-star-fill"></i>9.6</p>
+                    </div>
+                   </a>
+                   <a href="#" class="card">
+                    <img src="the boys.jpg" alt="">
+                    <div class="cont">
+                        <h3>The Boys</h3>
+                        <p>Action, 2021 , <span>IMDB</span><i class="bi bi-star-fill"></i>9.6</p>
+                    </div>
+                   </a>
+                   <a href="#" class="card">
+                    <img src="the boys.jpg" alt="">
+                    <div class="cont">
+                        <h3>The Boys</h3>
+                        <p>Action, 2021 , <span>IMDB</span><i class="bi bi-star-fill"></i>9.6</p>
+                    </div>
+                   </a>
+                </div>
+            </div>
+
         </nav>
 
     </header>
