--- a/index2.html
+++ b/index2.html
@@ -80,6 +80,20 @@
             </div>
 
         </nav>
+        <div class="content">
+            <h1 id="title">Money Heist</h1>
+            <p>Money Heist is a Spanish heist crime drama television series created by Álex Pina. The series traces two long-prepared heists led by the Professor, one on the Royal Mint of Spain</p>
+            <div class="details">
+                <h6>Netflix Origina Film</h6>
+                <h5 id="gen">Thriller</h5>
+                <h4>2021</h4>
+                <h3 id="rate"><span>IMDB</span><i class="bi bi-star-fill"></i>9.6</h3>
+            </div>
+            <div class="btns">
+                <a href="#" id="play">Watch <i class="bi bi-play-fill"></i></a>
+                <a href="#" id="download_main"> <i class="bi bi-download"></i></a>
+            </div>
+        </div>
 
     </header>
    
