--- a/index2.html
+++ b/index2.html
@@ -94,6 +94,25 @@
                 <a href="#" id="download_main"> <i class="bi bi-download"></i></a>
             </div>
         </div>
+        <section>
+            <h4>Popular</h4>
+            <div class="cards">
+                <a href="#" class="card">
+                    <img src="the boys.jpg" alt="" class="poster">
+                    <div class="rest_card">
+                        <img src="the boys1.jpg" alt="">
+                        <div class="cont">
+                            <h4>The Boys</h4>
+                            <div class="sub">
+                                <p>Action, 2022</p>
+                                <h3> <span>IMDB</span><i class="bi bi-star-fill"></i>9.6</h3>
+                            </div>
+                        </div>
+                    </div>
+                </a>
+               
+            </div>
+        </section>
 
     </header>
    
