--- a/the boys.html
+++ b/the boys.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Movies</title>
+    <title> The Boys |Movies</title>
     <link rel="shortcut icon" href="https://cdn-icons-png.flaticon.com/128/83/83519.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <link rel="stylesheet" href="index2.css"> 
@@ -57,8 +57,9 @@
                 <h3 id="rate"><span>IMDB</span><i class="bi bi-star-fill"></i>9.6</h3>
             </div>
             <div class="btns">
-                <a href="#" id="play">Watch <i class="bi bi-play-fill"></i></a>
-                <a href="#" id="download_main"> <i class="bi bi-download"></i></a>
+               <a href="#" download="the boys 480px" id="low_q">480ph</a>
+               <a href="#" download="the boys 720px" id="medium_q">720ph</a>
+               <a href="#" download="the boys 1080px" id="high_q">1080ph</a>
             </div>
         </div>
         <section>
@@ -89,5 +90,23 @@
     </header>
    
    <script src="app.js"></script> 
+   <script>
+    fetch(json_url).then((Response) => Response.json())
+    .then(data => {
+        let movies_array = data.filter(ele => {
+            return ele.name === "the boys";
+        });
+
+        document.getElementById('title').innerText = movies_array[0].name;
+        document.getElementById('low_q').href = movies_array[0].low;
+        document.getElementById('medium_q').href = movies_array[0].medium;
+        document.getElementById('high_q').href = movies_array[0].high;
+         document.getElementById('gen').innerText = movies_array[0].genre;
+         document.getElementById('date').innerText = movies_array[0].date;
+         document.getElementById('rate').innerHTML = ` <span>IMDB</span><i class="bi bi-star-fill"></i>${movies_array[0].imdb}`;
+         
+
+    })
+   </script>
 </body>
 </html>
