--- a/Search.html
+++ b/Search.html
@@ -10,6 +10,7 @@
             display: none;
         }
         body{
+/*             display: flex; */
             margin: 0;
             padding: 0;
             background: rgb(25, 25, 25);
@@ -105,7 +106,6 @@
         <img id="loader-gif" src=" https://i.giphy.com/media/y1ZBcOGOOtlpC/giphy.webp" id="loading" alt="">
     </div>
      <div id="movies">
-
      </div>
     
     
