--- a/login.html
+++ b/login.html
@@ -7,7 +7,7 @@
     <title>login</title>
 </head>
 <style>
-/*     notjing  */
+    notjing 
       #bar{
        background-color: rgb(15, 14, 14);
         position: sticky;
